--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <img
-        src="./images/Image.jpg"
+        src="./images/image.png"
         width="120"
         class="logo"
         alt="car"
@@ -46,7 +46,7 @@
           </p>
       </section>
       <section>
-        <img src="images/Image.jpg" alt="">
+        <img src="images/image.png" alt="">
         <p>
           I will complete any project with customer satisfaction.
 Furthermore, I completed 1 year diploma in Algonquin college
