--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <img
-        src="./images/Image.jpg"
+        src="./images/image.png"
         width="150"
         class="logo"
         alt="car"
