styling mobile view

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vehicles</title>
+    <title>About</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
         src="./images/image.png"
         width="120"
         class="logo"
-        alt="car"
+        alt="logo"
       />
       <nav class="navigation">
         <ul>
@@ -33,9 +33,9 @@
       </nav>
     </header>
     <main>
-      <h1>Customer success is our success</h1>
+      <h1 class="title">Customer success is our success</h1>
       <section>
-        <img src="images/Image6.jpg" alt="">
+        <img src="images/Image6.jpg" alt="portrait">
         <p>I am a professional graphic designer. I have much 
           experience in designing Business cards and Flyers.
           I use Adobe Illustrator and Adobe Photoshop to design
@@ -46,7 +46,7 @@
           </p>
       </section>
       <section>
-        <img src="images/image.png" alt="">
+        <img src="images/image.png" alt="logo">
         <p>
           I will complete any project with customer satisfaction.
 Furthermore, I completed 1 year diploma in Algonquin college
@@ -57,7 +57,7 @@ Furthermore, I completed 1 year diploma in Algonquin college
       </section>
     </main>
     <footer class="footer">
-      &#169;CanadaGt
+      &#169;All Rights Reserved
       <div class="links">
         <a
           href="https://www.facebook.com/gtcarslimited/"
