--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         src="./images/image.png"
         width="120"
         class="logo"
-        alt="car"
+        alt="logo"
       />
       <nav class="navigation">
         <ul>
@@ -34,7 +34,7 @@
     </header>
 
     <div class="container">
-      <h1>You are welcome to message me</h1>
+      <h1 class="title">You are welcome to message me</h1>
       <form class="form">
         <input type="text" name="username" placeholder="Name" />
         <input type="email" name="email" placeholder="Email" />
