--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Canada GT</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link
       rel="stylesheet"
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <!-- This is the services page -->
     <header class="header">
       <img
         src="./images/image.png"
         width="150"
         class="logo"
-        alt="car"
+        alt="logo"
       />
       <nav class="navigation">
         <ul>
@@ -37,7 +38,7 @@
       <section>
         <div class="banner">
           <h1>Let's Be Your Partner</h1>
-          <img src="./images/Image1.jpg" alt="blue car" />
+          <img src="./images/Image1.jpg" alt="webdesign" />
         </div>
       </section>
       <section>
