--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vehicles</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
         src="./images/image.png"
         width="120"
         class="logo"
-        alt="car"
+        alt="logo"
       />
       <nav class="navigation">
         <ul>
@@ -33,23 +33,25 @@
       </nav>
     </header>
     <main>
-      <h1>Please see our professional Servces</h1>
+      <h1 class="title">Please see our professional Services</h1>
+      <div class="content">
       <section>
-        <img src="images/Image2.jpg" alt="">
-        <img src="images/Image3.jpg" alt="">
+        <img src="images/Image2.jpg" alt="fish graphics">
+        <img src="images/Image3.jpg" alt="fish graphics sad">
         <p>This shows part of my art in creating digital graphics using illustrator  
           </p>
       </section>
       <section>
-        <img src="images/Image4.jpg" alt="">
-        <img src="images/Image5.jpg" alt="">
+        <img src="images/Image4.jpg" alt="Volks Wagon logo">
+        <img src="images/Image5.jpg" alt="shoping">
         <p>
           This shows my photography skills using DSLR and mirrorless cameras
         </p>
       </section>
+    </div>
     </main>
     <footer class="footer">
-      &#169;CanadaGt
+      &#169;All Rights Reserved
       <div class="links">
         <a
           href="https://www.facebook.com/gtcarslimited/"
