updates the styling of home page

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     </header>
 
     <main>
+      <div>
       <section>
         <div class="banner">
-          <h1>Let's Be Your Partner</h1>
+          <h1 class="title">Let's Be Your Partner</h1>
           <img src="./images/Image1.jpg" alt="webdesign" />
         </div>
       </section>
@@ -46,6 +47,8 @@
           <p> 
             I am Marawan Alhalawani, a graphic designer and photographer based in Ottawa, Canada. I have a passion for creating beautiful and functional websites.
           </p>
+        </div>
+      </div>
           <div class="btnContainer">
             <button>Graphics Design</button>
             <button>photographer</button>
